Update pom.xml to add dependency for postgresql

--- a/pom.xml
+++ b/pom.xml
@@ -50,4 +50,11 @@
     </profile>
   </profiles>
 	<artifactId>InsultApp</artifactId>
+	<dependencies>
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>9.4-1200-jdbc41</version>
+		</dependency>
+	</dependencies>
 </project>
